--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hacking Incidents List</title>
+  <link href="style.css" rel='stylesheet' />
 </head>
 <body>
 <div id="app"></div>
